plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.opus'
version = '0.0.1-SNAPSHOT'
description = 'opus_backend'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// 이미지 변환 라이브러리
	implementation 'com.sksamuel.scrimage:scrimage-core:4.3.0'
	implementation 'com.sksamuel.scrimage:scrimage-webp:4.3.0'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	//restdocs
	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    // Apache POI for Excel file handling
    implementation 'org.apache.poi:poi:5.2.3'
    implementation 'org.apache.poi:poi-ooxml:5.2.3'
}

ext {
	set('snippetsDir', file("build/generated-snippets"))
}

tasks.named('test') {
	useJUnitPlatform()
	outputs.dir project.snippetsDir
}

tasks.named('asciidoctor') {
	inputs.dir project.snippetsDir
	dependsOn tasks.named('test')
}

tasks.register('copyRestDocs', Copy) {
	dependsOn tasks.named('asciidoctor')
	from(tasks.named('asciidoctor').get().outputDir)
	into('src/main/resources/static/docs')
}

tasks.named('bootJar') {
	dependsOn tasks.named('copyRestDocs')
}
